--- a/app/src/main/res/layout/image_select_item.xml
+++ b/app/src/main/res/layout/image_select_item.xml
@@ -3,7 +3,7 @@
     android:layout_width="fill_parent"
     android:layout_height="fill_parent" >
 
-    <ImageView
+    <com.facebook.drawee.view.SimpleDraweeView
         android:id="@+id/img_view"
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
