--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,25 +1,25 @@
 <resources>
 
   <!-- Base application theme. -->
-  <style name="AppTheme" parent="Theme.AppCompat.Light.DarkActionBar">
+  <style name="AppTheme" parent="Theme.AppCompat.Light.NoActionBar">
     <!-- Customize your theme here. -->
     <item name="colorPrimary">@color/colorPrimary</item>
     <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
     <item name="colorAccent">@color/colorAccent</item>
   </style>
 
-  <style name="text_20_444444">
+  <style name="text_20_ffffff">
     <item name="android:textSize">20dip</item>
-    <item name="android:textColor">#444444</item>
+    <item name="android:textColor">#ffffff</item>
   </style>
 
-  <style name="text_18_444444">
+  <style name="text_18_ffffff">
     <item name="android:textSize">18dip</item>
-    <item name="android:textColor">#444444</item>
+    <item name="android:textColor">#ffffff</item>
   </style>
-  <style name="text_16_444444">
-    <item name="android:textSize">14dip</item>
-    <item name="android:textColor">#444444</item>
+  <style name="text_16_ffffff">
+    <item name="android:textSize">16dip</item>
+    <item name="android:textColor">#ffffff</item>
   </style>
 
   <style name="blue_text_18_style">
