--- a/app/src/main/res/layout/ablum_list_view_item.xml
+++ b/app/src/main/res/layout/ablum_list_view_item.xml
@@ -6,15 +6,13 @@
     android:background="@android:color/white"
     android:gravity="center_vertical" >
 
-  <ImageView
+  <com.facebook.drawee.view.SimpleDraweeView
       android:id="@+id/album_cover"
       android:layout_width="85dip"
       android:layout_height="85dip"
       android:layout_margin="15dp"
       android:layout_alignParentLeft="true"
-      android:layout_centerVertical="true"
-      android:src="@drawable/img_pic_selected">
-  </ImageView>
+      android:layout_centerVertical="true"/>
 
   <LinearLayout
       android:layout_width="wrap_content"
