--- a/app/src/main/res/layout/image_select_item.xml
+++ b/app/src/main/res/layout/image_select_item.xml
@@ -1,12 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="fill_parent"
-    android:layout_height="fill_parent" >
+    android:layout_height="fill_parent"
+    xmlns:fresco="http://schemas.android.com/apk/res-auto">
 
     <com.facebook.drawee.view.SimpleDraweeView
         android:id="@+id/img_view"
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
+        fresco:placeholderImage="@color/colorAccent"
         android:scaleType="fitXY" />
 
     <RelativeLayout
